clusters/apps/base/soho/nextcloud/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nextcloud
  namespace: istio-system
spec:
  hosts:
    - 'cloud.${SECRET_DOMAIN}'
  gateways:
    - istio-system/main
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: nextcloud-nginx.soho.svc.cluster.local
